--- a/progress_steps/styles.css
+++ b/progress_steps/styles.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background-color: #121212;
+  color: rgba(223, 229, 235, 0.767);
+  background-color: #1e1a22;
   font-family: 'Muli', sans-serif;
   display: flex;
   align-items: center;
@@ -14,4 +15,60 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+.progress {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.round {
+  height: 6vh;
+  width: 6vh;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: #553d75 1px solid;
+}
+
+.line {
+  background-color: #39343f79;
+  height: 0.5vh;
+  width: 6vw;
+  background-size: 200%;
+  transition: 0.9s ease-in-out;
+}
+
+.main-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn {
+  height: 40px;
+  margin: 9vh 20px;
+  padding: 10px 20px;
+  border: #86215fde 1px solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 7px;
+}
+
+.active .round,
+.active .line {
+  background-color: #553d75;
+}
+
+.btn-active {
+  background-color: #862160;
 }
