--- a/progress_steps/styles.css
+++ b/progress_steps/styles.css
@@ -63,6 +63,7 @@ body {
   justify-content: center;
   border-radius: 7px;
   cursor: pointer;
+  transition: background-color 0.5s ease-out;
 }
 
 .active .round,
