--- a/Rotating_navigation/styles.css
+++ b/Rotating_navigation/styles.css
@@ -7,11 +7,59 @@
 body {
   background-color: #121212;
   font-family: 'Muli', sans-serif;
+  position: relative;
+  overflow-x: hidden;
+}
+
+.container {
+  position: absolute;
+  max-width: 1400px;
+  margin: 18vh auto;
+  padding-bottom: 130vh;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  transform: none;
+  transition: transform 0.6s ease-in;
+  z-index: 2;
+}
+.rotate-container {
+  transform: rotate(-20deg);
+  transform-origin: top left;
+}
+
+.article {
+  max-width: 100%;
+  margin: 0 50px;
+}
+
+.btn {
+  background-color: #a56547;
+  color: rgba(255, 255, 255, 0.897);
+  position: fixed;
+  width: 12rem;
+  height: 12rem;
+  top: -70px;
+  left: -60px;
+  padding-top: 4rem;
+  padding-left: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  height: 100vh;
-  overflow: hidden;
-  margin: 0;
+  border-radius: 45%;
+  z-index: 3;
+}
+.nav {
+  position: absolute;
+  color: white;
+  z-index: -1;
+  bottom: 0;
+  left: 0;
+}
+
+img {
+  width: 100%;
+  height: 1000px;
+  object-fit: cover;
 }
